filebrowser/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebrowser
  namespace: filebrowser
spec:
  replicas: 1
  selector:
    matchLabels:
      app: filebrowser
  template:
    metadata:
      labels:
        app: filebrowser
    spec:
      containers:
        - name: filebrowser
          image: filebrowser/filebrowser:v2.63.23
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 80

          volumeMounts:
            - name: storage
              mountPath: /srv

            - name: storage
              mountPath: /database
              subPath: database

            - name: storage
              mountPath: /config
              subPath: config

          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi

      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: filebrowser-data
