filebrowser/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
#  annotations:
#    cert-manager.io/cluster-issuer: ca-issuer
  name: filebrowser
  namespace: filebrowser
spec:
  ingressClassName: traefik

  rules:
    - host: files.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: filebrowser
                port:
                  number: 80
#  tls:
#  - hosts:
#    - files.home
#    secretName: files-cert
